<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/no_hfp_error_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/emergency_call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_button_text"
        android:minWidth="@dimen/emergency_button_min_width"
        android:minHeight="@dimen/emergency_button_min_height"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/emergency_text_color"
        android:layout_marginBottom="@dimen/emergency_button_bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/error_icon"
        android:layout_width="@dimen/no_hfp_icon_size"
        android:layout_height="@dimen/no_hfp_icon_size"
        android:tint="@color/primary_icon_color"
        android:src="@drawable/ic_bluetooth"
        android:layout_marginBottom="@dimen/no_hfp_icon_margin_bottom"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/error_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@id/error_string"
        style="@style/FullScreenErrorMessageStyle"
        android:text="@string/no_hfp"
        app:layout_constraintTop_toBottomOf="@id/error_icon"
        app:layout_constraintBottom_toTopOf="@+id/connect_bluetooth_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.android.car.apps.common.UxrButton
        android:id="@+id/connect_bluetooth_button"
        style="@style/FullScreenErrorButtonStyle"
        android:text="@string/connect_bluetooth_button_text"
        android:layout_marginTop="@dimen/connect_bluetooth_button_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/error_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
